# cloudflare-ufw-sync

./: .editorconfig  CLAUDE.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto-assign.yml  auto_assign_project.yml  ci.yml  codeql-analysis.yml  codeql.yml  dependabot-auto-merge.yml  labeler.yml  publish.yml  semver.yml  tests.yml
src/cloudflare_ufw_sync/: cli.py  cloudflare.py  config.py  sync.py  ufw.py
tests/: conftest.py
tests/unit/: test_cli.py  test_config.py  test_sync_service.py  test_ufw_manager.py
