[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudflare-ufw-sync"
version = "0.1.0"
description = "Enterprise-grade Cloudflare IP synchronization for UFW"
readme = "README.md"
authors = [
    { name = "Thomas Vincent", email = "info@thomasvincent.xyz" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: Security",
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
    "types-PyYAML>=6.0.12.20260408",
]

[project.urls]
Homepage = "https://github.com/thomasvincent/cloudflare-ufw-sync"
Repository = "https://github.com/thomasvincent/cloudflare-ufw-sync"

[project.scripts]
cloudflare-ufw-sync = "cloudflare_ufw_sync.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudflare_ufw_sync"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=cloudflare_ufw_sync --cov-report=xml --cov-report=term"
